--- a/src/main/resources/assets/crystallized-mod/lang/en_us.json
+++ b/src/main/resources/assets/crystallized-mod/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.crystallized-mod.crystallized_ingot": "Crystallized Ingot",
   "item.crystallized-mod.raw_crystallized": "Raw Crystallized",
 
-  "item.crystallized-mod.crystallized_block": "Crystallized Block"
+  "item.crystallized-mod.crystallized_block": "Crystallized Block",
+  "item.crystallized-mod.crystallized_ore": "Crystallized Ore"
 }
