added new item namely, Exalter, that can change the obsidian block to an crying obsidian

--- a/src/main/resources/assets/crystallized-mod/lang/en_us.json
+++ b/src/main/resources/assets/crystallized-mod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.crystallized-mod.crystallized_ingot": "Crystallized Ingot",
   "item.crystallized-mod.raw_crystallized": "Raw Crystallized",
 
+  "item.crystallized-mod.exalter": "Exalter",
+
   "item.crystallized-mod.crystallized_block": "Crystallized Block",
   "item.crystallized-mod.crystallized_ore": "Crystallized Ore",
 
