added new Block and Ingot, Endo Block/Ingot, and also new feature for the Exalter, can now turn Netherite Block into Endo Block and also added crafting recipe for Exalter

--- a/src/main/resources/assets/crystallized-mod/lang/en_us.json
+++ b/src/main/resources/assets/crystallized-mod/lang/en_us.json
@@ -1,11 +1,13 @@
 {
   "item.crystallized-mod.crystallized_ingot": "Crystallized Ingot",
   "item.crystallized-mod.raw_crystallized": "Raw Crystallized",
+  "item.crystallized-mod.endo_ingot": "Endo Ingot",
 
   "item.crystallized-mod.exalter": "Exalter",
 
   "item.crystallized-mod.crystallized_block": "Crystallized Block",
   "item.crystallized-mod.crystallized_ore": "Crystallized Ore",
+  "item.crystallized-mod.endo_block": "Endo Block",
 
   "itemgroup.crystallized-mod.crystallized_items": "Crystallized Items",
   "itemgroup.crystallized-mod.crystallized_blocks": "Crystallized Blocks"
